move index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
   <head>
     <title>William Tell Overdrive</title>
-    <script type="application/javascript" src="./main.js"></script>
+    <script type="application/javascript" src="./dist/main.js"></script>
   </head>
   
   <body>
