Add reset stylesheet

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <title>William Tell Overdrive</title>
     <script type="application/javascript" src="./dist/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="./stylesheets/reset.css" />
   </head>
   
   <body>
-    <canvas class="game-canvas"></canvas>
+    <div>
+      <div class="buttons">
+
+      </div>
+      <div class="links">
+
+      </div>
+    </div>
+    <div>
+      <canvas class="game-canvas"></canvas>
+      <canvas class="energy-bar"></canvas>
+    </div>
     
   </body>
 
