--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
   <body>
     <div>
       <div class="buttons">
-
+        <button class="play-btn">
+          <img src="assets/images/text/play.png" alt="play" class="play">
+        </button>
+        <button class="play-btn">
+          <img src="assets/images/text/directions.png" alt="play" class="play">
+        </button>
       </div>
       <div class="links">
-
+        <button class="play-btn">
+          <img src="assets/images/text/github.png" alt="play" class="play">
+        </button>
+        <button class="play-btn">
+          <img src="assets/images/text/linkedin.png" alt="play" class="play">
+        </button>
       </div>
     </div>
     <div>
