Add some styling to buttons

--- a/index.html
+++ b/index.html
@@ -4,28 +4,46 @@
     <title>William Tell Overdrive</title>
     <script type="application/javascript" src="./dist/main.js"></script>
     <link rel="stylesheet" type="text/css" href="./stylesheets/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css" />
   </head>
   
   <body>
-    <div>
+    <div class="body-top">
       <div class="buttons">
         <button class="play-btn">
-          <img src="assets/images/text/play.png" alt="play" class="play">
+          <img 
+            src="assets/images/text/play.png" 
+            alt="play" 
+            class="play"
+          >
         </button>
-        <button class="play-btn">
-          <img src="assets/images/text/directions.png" alt="play" class="play">
+        <button class="Directions-btn">
+          <img 
+            src="assets/images/text/directions.png" 
+            alt="directions" 
+            class="directions"
+          >
         </button>
       </div>
       <div class="links">
-        <button class="play-btn">
-          <img src="assets/images/text/github.png" alt="play" class="play">
+        <button class="github-btn">
+          <img 
+            src="assets/images/text/github.png" 
+            alt="github" 
+            class="github"
+          >
         </button>
-        <button class="play-btn">
-          <img src="assets/images/text/linkedin.png" alt="play" class="play">
+        <button class="linkedin-btn">
+          <img 
+            src="assets/images/text/linkedin.png" 
+            alt="linkedin" 
+            class="linkedin"
+          >
         </button>
       </div>
     </div>
-    <div>
+    <div class="canvases">
+      <canvas class="intro-canvas"></canvas>
       <canvas class="game-canvas"></canvas>
       <canvas class="energy-bar"></canvas>
     </div>
