Add margins to buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   
   <body>
+    <img 
+      src="assets/images/backgrounds/page_bg.jpg" 
+      alt="page_bg"
+      class="page-bg"  
+    >
     <div class="body-top">
       <div class="buttons">
         <button class="play-btn">
