Change links buttons to links

--- a/index.html
+++ b/index.html
@@ -31,20 +31,19 @@
         </button>
       </div>
       <div class="links">
-        <button class="github-btn">
-          <img 
-            src="assets/images/text/github.png" 
-            alt="github" 
-            class="github"
-          >
-        </button>
-        <button class="linkedin-btn">
+        <a 
+          href="https://github.com/JS-Bogart/William-Tell-Overdrive"
+          class="github-btn"
+        >
+          <img src="assets/images/text/github.png" alt="github" class="github">
+        </a>
+        <a class="linkedin-btn">
           <img 
             src="assets/images/text/linkedin.png" 
             alt="linkedin" 
             class="linkedin"
           >
-        </button>
+        </a>
       </div>
     </div>
     <div class="canvases">
