Add title image

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       alt="page_bg"
       class="page-bg"  
     >
+    <img src="assets/images/backgrounds/title.jpg" alt="title" class="title">
     <div class="body-top">
       <div class="buttons">
-        <button class="play-btn">
+        <button id="play-btn">
           <img 
             src="assets/images/text/play.png" 
             alt="play" 
