Add music and mute button

--- a/index.html
+++ b/index.html
@@ -23,11 +23,20 @@
             class="play"
           >
         </button>
-        <button class="Directions-btn">
+        <button class="directions-btn">
           <img 
             src="assets/images/text/directions.png" 
             alt="directions" 
             class="directions"
+          >
+        </button>
+      </div>
+      <div>
+        <button id="audio-btn">
+          <img 
+            src="assets/images/text/audio.png" 
+            alt="audio"
+            class="audio-img"
           >
         </button>
       </div>
@@ -48,9 +57,8 @@
       </div>
     </div>
     <div class="canvases">
-      <canvas class="intro-canvas"></canvas>
       <canvas class="game-canvas"></canvas>
-      <canvas class="energy-bar"></canvas>
+      <!-- <canvas class="energy-bar"></canvas> -->
     </div>
     
   </body>
