--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="canvases">
       <canvas class="game-canvas"></canvas>
-      <!-- <canvas class="energy-bar"></canvas> -->
+      <canvas class="energy-bar"></canvas>
     </div>
     
   </body>
