--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css" />
     <link href='https://fonts.googleapis.com/css?family=Faster One' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+    <meta name="image" property="og:image" content="assets/images/backgrounds/title.jpg" />
   </head>
   
   <body>
