--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
           >
         </button>
       </div>
-      <div>
+      <div class="audio">
         <button id="audio-btn">
           <img 
             src="assets/images/text/audio.png" 
             alt="audio"
             class="audio-img"
           >
+          <p id="mute-symbol">&#x1f50a;</p>
         </button>
       </div>
       <div class="links">
@@ -77,9 +78,10 @@
         <h2>Directions</h2>
         <p>Use the LEFT and RIGHT arrows on your keyboard to steer the Starbolt.
           The bar on the left is your kinetic energy. You must hit the Murder Moon
-          with enough kinetic energy to destroy it. Hitting asteroids will reduce
-          your energy. Hitting planets, depleting your kinetic energy, or missing 
-          the Murder Moon will seal Earth's fate, and doom it to destruction!
+          with enough kinetic energy to destroy it. Hitting asteroids (red glow) 
+          will reduce your energy. Hitting planets (blue glow), depleting your 
+          kinetic energy, or missing the Murder Moon will seal Earth's fate, and 
+          doom it to destruction!
         </p>
         <button id="close-modal">Close</button>
       </div>
