--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Faster One' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
     <meta name="image" property="og:image" content="assets/images/backgrounds/title.jpg" />
+    <link rel="shortcut icon" href="assets/images/murder_moon/murder_moon.png" type="image/png">
   </head>
   
   <body>
