Add working linkedin link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         >
           <img src="assets/images/text/github.png" alt="github" class="github">
         </a>
-        <a class="linkedin-btn">
+        <a
+          href="https://www.linkedin.com/in/jeffrey-bogart-7874121a5/"
+          class="linkedin-btn"
+        >
           <img 
             src="assets/images/text/linkedin.png" 
             alt="linkedin" 
